# beamie

./: README.md  build.sh  main.py  pyproject.toml  register-app.sh
.depwire/: cache.db
app/: __init__.py  app_config.py  app_logging.py  main.py  media_player.py  pipewire_controller.py  state_manager.py
app/ui/: __init__.py  main_window.py
