[project]
name = "beamie"
version = "0.1.0"
description = "PipeWire desktop router and media streamer"
requires-python = ">=3.14"
dependencies = [
    "pyqt6>=6.10.2",
]

[project.scripts]
beamie = "main:main"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
